--- a/footballdata/DESCRIPTION
+++ b/footballdata/DESCRIPTION
@@ -4,5 +4,5 @@ Version: 0.1
 Authors@R: person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph)
 Depends: R (>= 3.1.0), zoo, lubridate, Metrics, plyr, RCurl
-License: What license is it under?
+License: What license is it under
 LazyData: true
